tests/ui/simple_pattern.rs


fn main() {
    
    // match literal false
    if (false) {
    }

    // match array sequences
    let a = ['b', 'c'];
    let b = ['b', 'b', 'c'];
    let no_warn = ['b'];
    
    // match cast
    let x = 0 as *const i32;    
}
